# ai-powered-sap-process-mining

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.ecc.yaml  config.s4hana.yaml  config.synthetic-gemini.yaml  config.synthetic-openai.yaml  config.synthetic-p2p.yaml  config.synthetic.yaml
scripts/: preview_findings.py
src/sap_process_mining/: __init__.py  _env.py  cli.py  config.py  event_log.py  persistence.py
src/sap_process_mining/analysis/: __init__.py  analyzer.py
src/sap_process_mining/connectors/: __init__.py  base.py  ecc.py  s4hana.py  synthetic.py
src/sap_process_mining/investigator/: __init__.py  investigator.py  tools.py
src/sap_process_mining/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/sap_process_mining/mining/: __init__.py  analytics.py  findings.py
src/sap_process_mining/processes/: __init__.py  o2c.py  p2p.py
src/sap_process_mining/reporting/: __init__.py  markdown.py
src/sap_process_mining/ui/: __init__.py  streamlit_app.py
tests/: test_investigator.py  test_synthetic_o2c.py  test_synthetic_p2p.py
